<resources>
    <string name="app_name">Ponzoñosos de La Pampa</string>
    <string name="medidas_generales_texto_1">Retirar anillos, pulseras, cadenas, y todo aquel elemento que comprometa la circulación.</string>
    <string name="medidas_generales_texto_2">Inmovilizar y elevar miembro afectado.</string>
    <string name="medidas_generales_texto_3">Vigilar la mecánica respiratoria. </string>
    <string name="medidas_generales_texto_4">Evitar todo tipo de fármacos, ya que los mismos favorecen a las hemorragias. </string>
    <string name="medidas_generales_texto_5">Limpiar con agua el área afectada.</string>
    <string name="medidas_generales_texto_6">Colocar Compresas frías en la zona afectada.</string>
    <string name="medidas_generales_texto_7">Hidratar al accidentado.</string>
    <string name="medidas_generales_texto_8">Tranquilizar a la persona y mantener la calma.</string>
    <string name="medidas_generales_texto_9">Fotografiar, en lo posible, al ejemplar que produjo el accidente.</string>
    <string name="medidas_generales_texto_10">Concurrir al centro de salud más cercano.</string>
    <string name="que_no_debemos_hacer_texto_1">No usar torniquetes.</string>
    <string name="que_no_debemos_hacer_texto_2">No inyectar antiveneno en el sitio de la mordedura.</string>
    <string name="que_no_debemos_hacer_texto_3">No suministrar bebidas alcohólicas como estimulantes o para mitigar dolor.</string>
    <string name="que_no_debemos_hacer_texto_4">No realizar cortes en la herida ni succionar veneno.</string>
    <string name="que_no_debemos_hacer_texto_5">No colocar alcohol o vinagre en la zona afectada</string>
    <string name="sueros_texto_1">Santa Rosa: 02954–455000</string>
    <string name="sueros_texto_2">General Pico: 02302–426256</string>
    <string name="sueros_texto_3">General Acha: 02952–432083</string>
    <string name="sueros_texto_4">Victorica: 02338–432000</string>
    <string name="sueros_texto_5">25 De Mayo: 0299–4948004</string>
    <string name="sueros_texto_6">Guatraché: 02924–492035</string>
    <string name="sueros_texto_7">Santa Isabel: 02338–493117</string>
    <string name="sueros_texto_8">Realicó: 02331–462057</string>
    <string name="sueros_texto_9">Casa De Piedra 02954–15666460</string>
    <string name="sueros_texto_10">La Adela: 02931–432245</string>
    <string name="sueros_texto_11">Gobernador Duval: 02984–15599252</string>
    <string name="medida_prevencion_texto_1">Usar botas de caña alta, o polainas de cuero en salidas al campo.</string>
    <string name="medida_prevencion_texto_2">Ir observando el terreno.</string>
    <string name="medida_prevencion_texto_3">Tener cuidado al levantar objetos, al saltar troncos o piedras.</string>
    <string name="medida_prevencion_texto_4">Adecuada distribución de la basura y pasto corto.</string>
    <string name="medida_prevencion_texto_5">Protecciones en las aberturas de las casas.</string>
    <string name="medida_prevencion_texto_6">Tener presente dirección y teléfono del centro con antivenenos más cercano</string>
    <string name="medida_prevencion_texto_7">Tener presente dirección y teléfono del centro de información, asesoramiento y asistencia toxicológica.</string>
    <string name="datos_facultad">Facultad de Ciencias Veterinarias \nUNLPam calle 5 esq. 116, General Pico, La Pampa \n@ mariabruni@live.com.ar </string>
    <string name="datos_asistencia">Asistencia Toxicológica \nCentro Nacional de Intoxicaciones  \nHospital Nacional | Prof. Alejandro Posadas</string>
    <string name="peligrosidad">Peligrosidad</string>
    <string name="tamaño">Tamaño</string>
    <string name="medidas_generales">Medidas generales</string>
    <string name="qu_no_hacer">¿Qué NO hacer?</string>
    <string name="d_nde_encontrar_ant_dotos">Dónde encontrar antídotos</string>
    <string name="no_colocar_ninguna_sustancia_alcohol_vinagre_etc">No colocar ninguna sustancia (alcohol, vinagre, etc.)</string>
    <string name="no_consumir_bebidas_alcoh_licas_o_sedantes">No consumir bebidas alcohólicas o sedantes</string>
    <string name="no_aplicar_hielo_directamente">No aplicar hielo directamente</string>
    <string name="no_incidir_o_succionar_la_herida">No incidir o succionar la herida</string>
    <string name="no_usar_torniquetes">No usar torniquetes</string>
    <string name="background">background</string>
    <string name="retirar_anillos_pulseras_calzado_y_todo_aquel_elemento_que_est_comprimiendo_la_circulaci_n">Retirar anillos, pulseras, calzado y todo aquel elemento que esté comprimiendo la circulación</string>
    <string name="evitar_el_roce_de_la_zona_lo_que_podr_a_favorecer_la_expansi_n_del_veneno">Evitar el roce de la zona, lo que podría favorecer la expansión del veneno</string>
    <string name="colocar_compresas_fr_as_en_la_zona_afectada_nunca_hielo_directo">Colocar compresas frías en la zona afectada (nunca hielo directo)</string>
    <string name="mantener_la_zona_en_reposo_y_elevarla_si_es_posible">Mantener la zona en reposo y elevarla si es posible</string>
    <string name="trasladarse_r_pidamente_al_centro_de_salud_m_s_cercano">Trasladarse rápidamente al centro de salud más cercano</string>
    <string name="ponzo_osos_de_la_pampa">Ponzoñosos de La Pampa</string>
    <string name="esta_aplicaci_n_es_parte_del_proyecto_reconocimiento_y_prevenci_n_de_accidentes_por_animales_ponzo_osos_en_la_regi_n_norte_de_la_provincia_de_la_pampa">Esta aplicación es parte del proyecto \'Reconocimiento y prevención de accidentes por animales ponzoñosos en la región norte de la provincia de La Pampa\'</string>
    <string name="resoluci_n_n_316_2017_del_consejo_directivo">Resolución Nº 316/2017 del Consejo Directivo</string>
    <string name="las_fotograf_as_incluidas_en_la_aplicaci_n_forman_parte_de_registros_propios_de_los_integrantes_del_proyecto_y_de_consultas_enviadas_por_la_comunidad">Las fotografías incluidas en la aplicación forman parte de registros propios de los integrantes del proyecto y de consultas enviadas por la comunidad.</string>
    <string name="a_o_de_inicio_y_finalizaci_n_del_proyecto">Año de inicio y finalización del proyecto</string>
    <string name="octubre_2017_a_octubre_2019">Octubre 2017 a Octubre 2019</string>
    <string name="animal">Animal</string>
    <string name="ver_fotos">Ver fotos</string>
    <string name="nombre_com_n">Nombre Común</string>
    <string name="ara_a">Araña</string>
    <string name="nombre_cient_fico">Nombre Científico</string>
    <string name="nivel_de_riesgo">Nivel de riesgo</string>
    <string name="viuda_negra">Viuda Negra</string>
    <string name="fam_lycosidae">Fam. Lycosidae</string>
    <string name="s_ntomas_picadura">Síntomas Picadura</string>
    <string name="fuerte_dolor_local_inflamaci_n_y_enrojecimiento">Fuerte dolor local, inflamación y enrojecimiento</string>
    <string name="no">No</string>
    <string name="ant_doto">Antídoto</string>
    <string name="h_bitat">Hábitat</string>
    <string name="hogar_jardines_parques_y_zonas_rurales">Hogar, Jardines, Parques y Zonas Rurales</string>
    <string name="medidas_frente_a_una_picadura">Medidas frente a una Picadura</string>
    <string name="lavar_con_agua_y_jab_n_y_colocar_compresas_fr_as">Lavar con agua y jabón y colocar compresas frías</string>
    <string name="de_0_5_a_7_cm">De 0,5 a 7 cm</string>
    <string name="tama_o">Tamaño</string>
    <string name="se_puede_confundir">Se puede confundir</string>
    <string name="observaciones">Observaciones</string>
    <string name="polybetes_sp_ara_n_de_monte">Polybetes sp. (Arañón de Monte)</string>
    <string name="grande">Grande</string>
    <string name="mediano">Mediano</string>
    <string name="peque_o">Pequeño</string>
    <string name="aplicar">Aplicar</string>
    <string name="cancelar">Cancelar</string>
    <string name="imagen">Imagen</string>
    <string name="qu_hacer_frente_a_un_accidente">⚠️ Qué hacer frente a un accidente?</string>
    <string name="medidas_de_prevenci_n">⚠️ Medidas de prevención</string>
    <string name="buscar_ponzo_oso">🔍 Buscar ponzoñoso…</string>
    <string name="bot_n_para_abrir_ara_a">Botón para abrir araña</string>
    <string name="bot_n_para_abrir_escorpion">Botón para abrir escorpion</string>
    <string name="bot_n_para_abrir_serpiente">Botón para abrir serpiente</string>
    <string name="iniciando">Iniciando...</string>
    <string name="alta">Alta</string>
    <string name="media">Media</string>
    <string name="baja">Baja</string>
    <string name="contacto_identificaci_n_ejemplares">Contacto - Identificación Ejemplares</string>
    <string name="facultad_de_ciencias_veterinarias_unlpam">Facultad de Ciencias Veterinarias UNLPam</string>
    <string name="calle_5_esq_116_general_pico_la_pampa">Calle 5 esq 116, General Pico, La Pampa</string>
    <string name="_02302_42_1607_int_6201">(02302) 42 1607 int 6201</string>
    <string name="_2302_467189">2302 467189</string>
    <string name="mariabruni_live_com_ar">mariabruni@live.com.ar</string>
    <string name="ponzonosos_lp">\@Ponzonosos.lp</string>
    <string name="correo">Icono correo</string>
    <string name="whatsapp">Icono whatsapp</string>
    <string name="instagram">Icono instagram</string>
    <string name="telefono">Icono telefono</string>
    <string name="carrusel_de_fotos">Carrusel de Fotos</string>
    <string name="logo_app">Logo app</string>
    <string name= "about">Sobre nosotros</string>
    <string name= "contact">Contactanos</string>
    <string name="_0_800_333_0160">0–800–333–0160</string>
</resources>
