<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundscreen">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="edu.unlpam.vet.ponzonosos.PreventionMeasuresActivity">

        <!-- AppBar -->
        <include android:id="@+id/iHeader" layout="@layout/app_bar" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp"
            android:paddingBottom="32dp"
            >


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Header con imagen de fondo -->
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/yellow_texture"
                            android:contentDescription="Encabezado amarillo" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="12dp"
                            android:gravity="center_vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:maxLines="2"
                                android:textSize="22dp"
                                android:ellipsize="end"
                                android:text="Medidas de Prevención"
                                style="@style/text_card"/>
                        </LinearLayout>
                    </FrameLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/medida_prevencion_texto_1"
                            app:drawableLeftCompat="@drawable/ic_check_item_list_green"
                            app:drawableStartCompat="@drawable/ic_check_item_list_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/medida_prevencion_texto_2"
                            app:drawableLeftCompat="@drawable/ic_check_item_list_green"
                            app:drawableStartCompat="@drawable/ic_check_item_list_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/medida_prevencion_texto_3"
                            app:drawableLeftCompat="@drawable/ic_check_item_list_green"
                            app:drawableStartCompat="@drawable/ic_check_item_list_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/medida_prevencion_texto_4"
                            app:drawableLeftCompat="@drawable/ic_check_item_list_green"
                            app:drawableStartCompat="@drawable/ic_check_item_list_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/medida_prevencion_texto_5"
                            app:drawableLeftCompat="@drawable/ic_check_item_list_green"
                            app:drawableStartCompat="@drawable/ic_check_item_list_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/medida_prevencion_texto_6"
                            app:drawableLeftCompat="@drawable/ic_check_item_list_green"
                            app:drawableStartCompat="@drawable/ic_check_item_list_green" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/medida_prevencion_texto_7"
                            app:drawableLeftCompat="@drawable/ic_check_item_list_green"
                            app:drawableStartCompat="@drawable/ic_check_item_list_green" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </ScrollView>
    </LinearLayout>
</FrameLayout>